// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultProps should render correctly for className 1`] = `
.emotion-0 {
  width: 100%;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  color: var(--bb-palette-primary, #000000)!important;
}

.emotion-3 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-3 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-3:hover {
  color: unset;
  fill: unset;
}

.emotion-3[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-3:not(:disabled):focus {
  outline: unset;
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:not(:disabled):hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:not(:disabled):focus:active,
.emotion-3:not(:disabled):hover:active {
  background-color: var(--bb-palette-white700, #000000);
}

.emotion-3 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-6 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-9 {
  margin-right: 0.5rem;
}

.emotion-26 {
  color: var(--bb-palette-danger, #000000)!important;
}

<div
  class="emotion-0 emotion-1 emotion-2 test bb-Box bb-Menu"
  role="menu"
>
  <div
    class="emotion-3 emotion-1 emotion-5 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-5 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-3 emotion-1 emotion-5 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-5 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-3 emotion-1 emotion-5 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-5 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-3 emotion-1 emotion-26 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-5 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;

exports[`overrides Menu.Divider.styles.base should render correctly 1`] = `
.emotion-0 {
  width: 100%;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-3 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-3:hover {
  color: unset;
  fill: unset;
}

.emotion-3[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-3:not(:disabled):focus {
  outline: unset;
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:not(:disabled):hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:not(:disabled):focus:active,
.emotion-3:not(:disabled):hover:active {
  background-color: var(--bb-palette-white700, #000000);
}

.emotion-3 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-6 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-9 {
  margin-right: 0.5rem;
}

.emotion-26 {
  color: var(--bb-palette-danger, #000000)!important;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Menu"
  role="menu"
>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-3 emotion-1 emotion-26 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;

exports[`overrides Menu.Group.styles.base should render correctly 1`] = `
.emotion-0 {
  width: 100%;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-3 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-3:hover {
  color: unset;
  fill: unset;
}

.emotion-3[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-3:not(:disabled):focus {
  outline: unset;
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:not(:disabled):hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:not(:disabled):focus:active,
.emotion-3:not(:disabled):hover:active {
  background-color: var(--bb-palette-white700, #000000);
}

.emotion-3 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-6 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-9 {
  margin-right: 0.5rem;
}

.emotion-26 {
  color: var(--bb-palette-danger, #000000)!important;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Menu"
  role="menu"
>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-3 emotion-1 emotion-26 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;

exports[`overrides Menu.Item.styles.base should render correctly 1`] = `
.emotion-0 {
  width: 100%;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-3 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-3:hover {
  color: unset;
  fill: unset;
}

.emotion-3[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-3:not(:disabled):focus {
  outline: unset;
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:not(:disabled):hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:not(:disabled):focus:active,
.emotion-3:not(:disabled):hover:active {
  background-color: var(--bb-palette-white700, #000000);
}

.emotion-3 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-3 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-6 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-9 {
  margin-right: 0.5rem;
}

.emotion-26 {
  color: var(--bb-palette-danger, #000000)!important;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Menu"
  role="menu"
>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-3 emotion-1 emotion-26 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;

exports[`overrides Menu.styles.base should render correctly 1`] = `
.emotion-0 {
  width: 100%;
}

.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-3 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-3:hover {
  color: unset;
  fill: unset;
}

.emotion-3[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-3:not(:disabled):focus {
  outline: unset;
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:not(:disabled):hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:not(:disabled):focus:active,
.emotion-3:not(:disabled):hover:active {
  background-color: var(--bb-palette-white700, #000000);
}

.emotion-3 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-6 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-9 {
  margin-right: 0.5rem;
}

.emotion-26 {
  color: var(--bb-palette-danger, #000000)!important;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Menu"
  role="menu"
>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-3 emotion-1 emotion-26 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  width: 100%;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-3 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-3:hover {
  color: unset;
  fill: unset;
}

.emotion-3[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-3:not(:disabled):focus {
  outline: unset;
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:not(:disabled):hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:not(:disabled):focus:active,
.emotion-3:not(:disabled):hover:active {
  background-color: var(--bb-palette-white700, #000000);
}

.emotion-3 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-6 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-9 {
  margin-right: 0.5rem;
}

.emotion-26 {
  color: var(--bb-palette-danger, #000000)!important;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Menu"
  role="menu"
>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-3 emotion-1 emotion-26 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;

exports[`props should render correctly for CSS props 1`] = `
.emotion-0 {
  width: 100%;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  background-color: var(--bb-palette-red, #ff0000)!important;
}

.emotion-3 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-3 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-3:hover {
  color: unset;
  fill: unset;
}

.emotion-3[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-3:not(:disabled):focus {
  outline: unset;
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:not(:disabled):hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:not(:disabled):focus:active,
.emotion-3:not(:disabled):hover:active {
  background-color: var(--bb-palette-white700, #000000);
}

.emotion-3 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-6 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-9 {
  margin-right: 0.5rem;
}

.emotion-26 {
  color: var(--bb-palette-danger, #000000)!important;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Menu"
  role="menu"
>
  <div
    class="emotion-3 emotion-1 emotion-5 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-5 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-3 emotion-1 emotion-5 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-5 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-3 emotion-1 emotion-5 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-5 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-3 emotion-1 emotion-26 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-5 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;

exports[`props should render correctly for an invisible dropdown menu 1`] = `
.emotion-0 {
  width: 100%;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-3 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-3:hover {
  color: unset;
  fill: unset;
}

.emotion-3[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-3:not(:disabled):focus {
  outline: unset;
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:not(:disabled):hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:not(:disabled):focus:active,
.emotion-3:not(:disabled):hover:active {
  background-color: var(--bb-palette-white700, #000000);
}

.emotion-3 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-6 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-9 {
  margin-right: 0.5rem;
}

.emotion-26 {
  color: var(--bb-palette-danger, #000000)!important;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Menu"
  role="menu"
>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-3 emotion-1 emotion-26 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;

exports[`props should render correctly with controlled option groups 1`] = `null`;

exports[`props should render correctly with groups 1`] = `
.emotion-0 {
  width: 100%;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-3 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-3:hover {
  color: unset;
  fill: unset;
}

.emotion-3[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-3:not(:disabled):focus {
  outline: unset;
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:not(:disabled):hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:not(:disabled):focus:active,
.emotion-3:not(:disabled):hover:active {
  background-color: var(--bb-palette-white700, #000000);
}

.emotion-3 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-6 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-9 {
  margin-right: 0.5rem;
}

.emotion-26 {
  color: var(--bb-palette-danger, #000000)!important;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Menu"
  role="menu"
>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-3 emotion-1 emotion-26 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;

exports[`props should render correctly with uncontrolled option groups 1`] = `
.emotion-0 {
  width: 100%;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4+.emotion-4 {
  margin-top: 1rem;
}

.emotion-9 {
  color: var(--bb-palette-text100, #000000);
  font-size: 0.75rem;
  font-weight: 600;
  letter-spacing: 0.025em;
  padding: 0.5rem 1rem;
  padding-top: 0.25rem;
  text-transform: uppercase;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-10[aria-checked="true"] {
  color: var(--bb-palette-primary, #000000);
}

.emotion-11 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-11 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-11:hover {
  color: unset;
  fill: unset;
}

.emotion-11[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-11:not(:disabled):focus {
  outline: unset;
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-11:not(:disabled):hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-11:not(:disabled):focus:active,
.emotion-11:not(:disabled):hover:active {
  background-color: var(--bb-palette-white700, #000000);
}

.emotion-11 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-16 {
  margin-right: 0.5rem;
  width: 16px;
}

.emotion-17 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Menu"
  role="menu"
>
  <div
    aria-labelledby="id-test"
    class="emotion-3 emotion-4 emotion-1 emotion-2 bb-Box bb-MenuGroup bb-MenuOptionGroup"
    role="group"
  >
    <div
      class="emotion-1 emotion-2 emotion-9 bb-Box bb-MenuGroupTitle"
      id="id-test"
    >
      Sort by
    </div>
    <div
      aria-checked="true"
      class="emotion-10 emotion-11 emotion-1 emotion-2 bb-Box bb-MenuItem bb-MenuOptionItem"
      id="test"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="emotion-1 emotion-2 emotion-16 bb-MenuOptionItemIconWrapper bb-Box"
      >
        <svg
          aria-hidden="true"
          class="emotion-17 emotion-1 emotion-2 bb-Box bb-Icon"
          role="img"
          viewBox="0 0 16 16"
        >
          <path
            d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      Ascending
    </div>
    <div
      aria-checked="false"
      class="emotion-10 emotion-11 emotion-1 emotion-2 bb-Box bb-MenuItem bb-MenuOptionItem"
      id="test"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="emotion-1 emotion-2 emotion-16 bb-MenuOptionItemIconWrapper bb-Box"
      />
      Descending
    </div>
  </div>
  <div
    aria-labelledby="id-test"
    class="emotion-3 emotion-4 emotion-1 emotion-2 bb-Box bb-MenuGroup bb-MenuOptionGroup"
    role="group"
  >
    <div
      class="emotion-1 emotion-2 emotion-9 bb-Box bb-MenuGroupTitle"
      id="id-test"
    >
      Countries
    </div>
    <div
      aria-checked="true"
      class="emotion-10 emotion-11 emotion-1 emotion-2 bb-Box bb-MenuItem bb-MenuOptionItem"
      id="test"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="emotion-1 emotion-2 emotion-16 bb-MenuOptionItemIconWrapper bb-Box"
      >
        <svg
          aria-hidden="true"
          class="emotion-17 emotion-1 emotion-2 bb-Box bb-Icon"
          role="img"
          viewBox="0 0 16 16"
        >
          <path
            d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      Australia
    </div>
    <div
      aria-checked="false"
      class="emotion-10 emotion-11 emotion-1 emotion-2 bb-Box bb-MenuItem bb-MenuOptionItem"
      id="test"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="emotion-1 emotion-2 emotion-16 bb-MenuOptionItemIconWrapper bb-Box"
      />
      United States
    </div>
    <div
      aria-checked="true"
      class="emotion-10 emotion-11 emotion-1 emotion-2 bb-Box bb-MenuItem bb-MenuOptionItem"
      id="test"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="emotion-1 emotion-2 emotion-16 bb-MenuOptionItemIconWrapper bb-Box"
      >
        <svg
          aria-hidden="true"
          class="emotion-17 emotion-1 emotion-2 bb-Box bb-Icon"
          role="img"
          viewBox="0 0 16 16"
        >
          <path
            d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      India
    </div>
  </div>
</div>
`;

exports[`theming Menu.Divider.styles.base should render correctly 1`] = `
.emotion-0 {
  width: 100%;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-3 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-3:hover {
  color: unset;
  fill: unset;
}

.emotion-3[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-3:not(:disabled):focus {
  outline: unset;
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:not(:disabled):hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:not(:disabled):focus:active,
.emotion-3:not(:disabled):hover:active {
  background-color: var(--bb-palette-white700, #000000);
}

.emotion-3 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-6 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-9 {
  margin-right: 0.5rem;
}

.emotion-26 {
  color: var(--bb-palette-danger, #000000)!important;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Menu"
  role="menu"
>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-3 emotion-1 emotion-26 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;

exports[`theming Menu.Group.styles.base should render correctly 1`] = `
.emotion-0 {
  width: 100%;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-3 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-3:hover {
  color: unset;
  fill: unset;
}

.emotion-3[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-3:not(:disabled):focus {
  outline: unset;
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:not(:disabled):hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:not(:disabled):focus:active,
.emotion-3:not(:disabled):hover:active {
  background-color: var(--bb-palette-white700, #000000);
}

.emotion-3 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-6 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-9 {
  margin-right: 0.5rem;
}

.emotion-26 {
  color: var(--bb-palette-danger, #000000)!important;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Menu"
  role="menu"
>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-3 emotion-1 emotion-26 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;

exports[`theming Menu.Item.styles.base should render correctly 1`] = `
.emotion-0 {
  width: 100%;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-3 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-3:hover {
  color: unset;
  fill: unset;
}

.emotion-3[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-3:not(:disabled):focus {
  outline: unset;
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:not(:disabled):hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:not(:disabled):focus:active,
.emotion-3:not(:disabled):hover:active {
  background-color: var(--bb-palette-white700, #000000);
}

.emotion-3 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-3 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-6 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-9 {
  margin-right: 0.5rem;
}

.emotion-26 {
  color: var(--bb-palette-danger, #000000)!important;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Menu"
  role="menu"
>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-3 emotion-1 emotion-26 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;

exports[`theming Menu.styles.base should render correctly 1`] = `
.emotion-0 {
  width: 100%;
}

.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-3 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-3:hover {
  color: unset;
  fill: unset;
}

.emotion-3[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-3:not(:disabled):focus {
  outline: unset;
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:not(:disabled):hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-3:not(:disabled):focus:active,
.emotion-3:not(:disabled):hover:active {
  background-color: var(--bb-palette-white700, #000000);
}

.emotion-3 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-6 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-9 {
  margin-right: 0.5rem;
}

.emotion-26 {
  color: var(--bb-palette-danger, #000000)!important;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Menu"
  role="menu"
>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-3 emotion-1 emotion-26 bb-Box bb-MenuItem"
    id="test"
    role="menuitem"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="emotion-6 emotion-1 emotion-2 emotion-9 bb-MenuItemIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;
